Fix span visibility error in smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,6 @@ button {
         padding: 1.75rem;
         font-weight: 600;
         font-size: 1.25rem;
-        visibility: visible;
     }
 }
 
@@ -99,7 +98,6 @@ button {
         padding: 1.5rem;
         font-weight: 600;
         font-size: 1rem;
-        visibility: visible;
     }
 }
 
